--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -39,5 +39,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <div><h6>2024_rebuild_michaelsuperCode_revised_&#9825_version</h6></div>	
+
   </body>
 </html>
